2005-05-19  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/Kconfig: Enable LTT support.

	* arch/i386/patches: Add combo patch against 2.6.9, merging LTT +
	Adeos r10c3.

	* nucleus/ltt.c: Shorten event labels.

2005-05-18  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnarch_read_timings): Fix
	CONFIG_ADEOS_PROFILING case.
	
2005-05-17  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.4

2005-05-17  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Do not include <linux/config.h> in
	simulation context.

2005-05-16  Alexis Berlemont  <alexis.berlemont@free.fr>

	* skins/rtai/task.c (rt_task_create): Properly set the suspension
	depth to 1 whenever the task is left in suspended state after
	creation.
	(rt_task_set_periodic): Do not clear the suspension depth: this is
	irrelevant with respect to the underlying conjunctive suspension
	scheme (XNSUSP, XNDELAY and XNPEND are dissociated).

2005-05-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c (__registry_proc_callback): Do not
	dereference object->key in the unexport case, since it's stale
	memory after the real-time caller has destroyed the containing
	descriptor.

	* include/nucleus/asm-*/system.h (xnarch_fault_notify): Add
	predicate to filter out debug traps from events causing SIGXCPU
	sending upon secondary mode switch.

2005-05-13  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/pipe.c: Add user-space support to the real-time
	side of the pipe.

2005-05-12  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (rt_task_set_mode): Add the T_WARNSW mode bit
	allowing to detect (unwanted) switches to secondary mode.

	* nucleus/shadow.c (xnshadow_relax): Send SIGXCPU upon migration
	whenever the XNTRAPSW bit is set in the thread status.

	* nucleus/pipe.c (xnpipe_recv): Return -EIDRM instead of -ESTALE
	upon pipe deletion.

	* skins/rtai/pipe.c: Previously defined rt_pipe_write() ->
	rt_pipe_send(), and rt_pipe_read() -> rt_pipe_receive(). New