@@ -93,6 +93,15 @@ else
    defaultwrap=no
 fi
 
+AC_MSG_CHECKING(for MVM atomic core mode)
+AC_ARG_ENABLE(mvm-atomic_core,
+	AS_HELP_STRING([--enable-mvm-atomic-core], [Enable MVM atomic core mode]),
+	[case "$enableval" in
+	y | yes) CONFIG_RTAI_MVM_ATOMIC_CORE=y ;;
+	*) unset CONFIG_RTAI_MVM_ATOMIC_CORE ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_MVM_ATOMIC_CORE:-no})
+
 AC_MSG_CHECKING(for RTAI nucleus debug support)
 AC_ARG_ENABLE(nucleus-debug,
 	AS_HELP_STRING([--enable-nucleus-debug], [Enable RTAI nucleus debug]),
@@ -477,6 +486,7 @@ AM_CONDITIONAL(CONFIG_RTAI_MVM_SKIN_VRTX,[test x$CONFIG_RTAI_MVM_SKIN_VRTX = xy]
 AM_CONDITIONAL(CONFIG_RTAI_MVM_SKIN_UITRON,[test x$CONFIG_RTAI_MVM_SKIN_UITRON = xy])
 AM_CONDITIONAL(CONFIG_RTAI_MVM_SKIN_POSIX,[test x$CONFIG_RTAI_MVM_SKIN_POSIX = xy])
 AM_CONDITIONAL(CONFIG_RTAI_MVM_SKIN_NATIVE,[test x$CONFIG_RTAI_MVM_SKIN_NATIVE = xy])
+AM_CONDITIONAL(CONFIG_RTAI_MVM_ATOMIC_CORE,test x$CONFIG_RTAI_MVM_ATOMIC_CORE = xy)
 
 dnl
 dnl Build the Makefiles
