@@ -4,6 +4,10 @@ CC = $(top_builddir)/gcic/gcic
 
 override CFLAGS = -g
 
+if CONFIG_RTAI_MVM_ATOMIC_CORE
+atomic_core := --no-inst
+endif
+
 lib_LIBRARIES = libnucleus_s.a
 
 # Shadow, pipe and fusion supports make no sense compiling in native
@@ -23,6 +27,7 @@ AM_CPPFLAGS = \
 	-D__IN_RTAI__ \
 	--gcic-backend=$(prefix)/libexec/gcic \
 	--kernel-code \
+	$(atomic_core) \
 	-I$(top_srcdir)/include \
 	-I@RTAI_INSTALLDIR@/source/include
 
