@@ -115,6 +115,8 @@ AWK = @AWK@
 CC = ../../../gcic/gcic
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CONFIG_RTAI_MVM_ATOMIC_CORE_FALSE = @CONFIG_RTAI_MVM_ATOMIC_CORE_FALSE@
+CONFIG_RTAI_MVM_ATOMIC_CORE_TRUE = @CONFIG_RTAI_MVM_ATOMIC_CORE_TRUE@
 CONFIG_RTAI_MVM_SKIN_NATIVE_FALSE = @CONFIG_RTAI_MVM_SKIN_NATIVE_FALSE@
 CONFIG_RTAI_MVM_SKIN_NATIVE_TRUE = @CONFIG_RTAI_MVM_SKIN_NATIVE_TRUE@
 CONFIG_RTAI_MVM_SKIN_POSIX_FALSE = @CONFIG_RTAI_MVM_SKIN_POSIX_FALSE@
