@@ -93,6 +93,8 @@ AWK = @AWK@
 CC = $(top_builddir)/gcic/gcic
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CONFIG_RTAI_MVM_ATOMIC_CORE_FALSE = @CONFIG_RTAI_MVM_ATOMIC_CORE_FALSE@
+CONFIG_RTAI_MVM_ATOMIC_CORE_TRUE = @CONFIG_RTAI_MVM_ATOMIC_CORE_TRUE@
 CONFIG_RTAI_MVM_SKIN_NATIVE_FALSE = @CONFIG_RTAI_MVM_SKIN_NATIVE_FALSE@
 CONFIG_RTAI_MVM_SKIN_NATIVE_TRUE = @CONFIG_RTAI_MVM_SKIN_NATIVE_TRUE@
 CONFIG_RTAI_MVM_SKIN_POSIX_FALSE = @CONFIG_RTAI_MVM_SKIN_POSIX_FALSE@
@@ -237,10 +239,12 @@ sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+@CONFIG_RTAI_MVM_ATOMIC_CORE_TRUE@atomic_core := --no-inst
 AM_CPPFLAGS = \
 	-D__IN_RTAI__ \
 	--gcic-backend=$(prefix)/libexec/gcic \
 	--skin-code \
+	$(atomic_core) \
 	-I$(srcdir)/.. \
 	-I$(top_srcdir)/include \
 	-I@RTAI_INSTALLDIR@/source/skins \
