@@ -1,3 +1,7 @@
+2005-05-20  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/ltt.c: Export xnltt_log_mark().
+
 2005-05-19  Philippe Gerum  <rpm@xenomai.org>
 
 	* nucleus/Kconfig: Enable LTT support.
